--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.4.0"
+    "@astrojs/tailwind": "^5.1.0",
+    "astro": "^4.4.0",
+    "astro-navbar": "^2.3.1",
+    "astro-seo": "^0.8.0",
+    "tailwindcss": "^3.4.1"
   }
 }
