--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "astro": "^4.4.0",
     "astro-navbar": "^2.3.1",
     "astro-seo": "^0.8.0",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "typed.js": "^2.1.0"
   }
 }
