--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "",
+  "name": "intro",
   "type": "module",
   "version": "0.0.1",
   "scripts": {
@@ -14,6 +14,7 @@
     "astro": "^4.4.0",
     "astro-navbar": "^2.3.1",
     "astro-seo": "^0.8.0",
+    "astro-tailwind-config-viewer": "^1.0.3",
     "tailwindcss": "^3.4.1",
     "typed.js": "^2.1.0"
   }
