--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
   "dependencies": {
     "@astrojs/tailwind": "^5.1.0",
     "astro": "^4.4.0",
+    "astro-integration-lottie": "^0.2.3",
     "astro-navbar": "^2.3.1",
     "astro-seo": "^0.8.0",
-    "astro-tailwind-config-viewer": "^1.0.3",
+    "lottie-web": "^5.12.2",
     "tailwindcss": "^3.4.1",
     "typed.js": "^2.1.0"
   }
