--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
   },
   "dependencies": {
     "@astrojs/tailwind": "^5.1.0",
-    "@qwikdev/astro": "^0.5.7",
+    "@astrojs/vercel": "^7.3.4",
     "astro": "^4.4.0",
     "astro-integration-lottie": "^0.2.3",
     "astro-navbar": "^2.3.1",
     "astro-seo": "^0.8.0",
     "lottie-web": "^5.12.2",
     "tailwindcss": "^3.4.1",
-    "typed.js": "^2.1.0"
+    "typed.js": "^2.1.0",
+    "typescript": "^5.3.3"
   }
 }
