--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/renderer-react": "^0.5.0",
     "@astrojs/tailwind": "^5.1.0",
     "@astrojs/vercel": "^7.3.4",
     "astro": "^4.4.0",
