--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@astrojs/tailwind": "^5.1.0",
     "@astrojs/vercel": "^7.3.4",
     "astro": "^4.4.0",
+    "astro-devtool-breakpoints": "^0.3.0",
     "astro-embed": "^0.6.1",
     "astro-imagetools": "^0.9.0",
     "astro-integration-lottie": "^0.2.3",
