--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "astro-integration-lottie": "^0.2.3",
     "astro-navbar": "^2.3.1",
     "astro-seo": "^0.8.0",
+    "atropos": "^2.0.2",
     "lottie-web": "^5.12.2",
     "tailwindcss": "^3.4.1",
     "typed.js": "^2.1.0",
