--- a/package.json
+++ b/package.json
@@ -12,18 +12,23 @@
   "dependencies": {
     "@astrojs/renderer-react": "^0.5.0",
     "@astrojs/tailwind": "^5.1.0",
-    "@astrojs/vercel": "^7.3.4",
-    "astro": "^4.4.0",
+    "@astrojs/vercel": "^7.5.4",
+    "astro": "^4.7.0",
     "astro-devtool-breakpoints": "^0.3.0",
-    "astro-embed": "^0.6.1",
+    "astro-embed": "^0.6.2",
     "astro-imagetools": "^0.9.0",
     "astro-integration-lottie": "^0.2.3",
-    "astro-navbar": "^2.3.1",
-    "astro-seo": "^0.8.0",
+    "astro-navbar": "^2.3.2",
+    "astro-seo": "^0.8.3",
     "atropos": "^2.0.2",
+    "franken-ui": "^0.0.8",
+    "lodash": "^4.17.21",
     "lottie-web": "^5.12.2",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "^3.4.3",
     "typed.js": "^2.1.0",
-    "typescript": "^5.3.3"
+    "typescript": "^5.4.5"
+  },
+  "devDependencies": {
+    "@types/lodash": "^4.17.0"
   }
 }
