--- a/package.json
+++ b/package.json
@@ -10,25 +10,31 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/react": "^3.3.2",
     "@astrojs/renderer-react": "^0.5.0",
     "@astrojs/tailwind": "^5.1.0",
     "@astrojs/vercel": "^7.5.4",
-    "astro": "^4.7.0",
+    "@nextui-org/react": "^2.3.6",
+    "@types/react": "^18.3.1",
+    "@types/react-dom": "^18.3.0",
+    "astro": "^4.7.1",
     "astro-devtool-breakpoints": "^0.3.0",
     "astro-embed": "^0.6.2",
-    "astro-imagetools": "^0.9.0",
     "astro-integration-lottie": "^0.2.3",
     "astro-navbar": "^2.3.2",
     "astro-seo": "^0.8.3",
     "atropos": "^2.0.2",
+    "framer-motion": "^11.1.9",
     "franken-ui": "^0.0.8",
     "lodash": "^4.17.21",
     "lottie-web": "^5.12.2",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "tailwindcss": "^3.4.3",
     "typed.js": "^2.1.0",
     "typescript": "^5.4.5"
   },
   "devDependencies": {
-    "@types/lodash": "^4.17.0"
+    "@types/lodash": "^4.17.1"
   }
 }
